add table to README

--- a/README.org
+++ b/README.org
@@ -1,2 +1,7 @@
 # Storybored
 Bloginator Project, Zamansky 2015
+| Group Members  | Role                     |
+| Angela Chan    | Leader                   |
+| Leon Cheng     | Backend Developer        |
+| Amanda Chiu    | User Experience Designer |
+| Eric Stringham | Middleware Developer     |
