--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@ Bloginator Project, Zamansky 2015
 
 * TODO To Do (Pages)
 
-- [X] Home Page
+- [-] Home Page
 - [ ] Login Page
 - [ ] Main Page
 - [ ] Story Page
