--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@ Bloginator Project, Zamansky 2015
 | Eric Stringham | Middleware Developer     |
 
 * TODO To Do (Pages)
-- [ ] Home Page
+- [X] Home Page
 - [ ] Login Page
 - [ ] Main Page
 - [ ] Story Page
