--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@ Bloginator Project, Zamansky 2015
 * What is Storybored?
 
 Write your stories /on/ our board \\
-/when/ you're bored. \\ \\
+/when/ you're bored. \\
 Storybored is a place where people can collaborate to create \\
 stories. People may post starts to stories and other users \\
 are able to add lines to these stories.
