--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@ Bloginator Project, Zamansky 2015
 
  Write your stories /on/ our board \\
 
- /when/ you're bored. \\
+ /when/ you're bored. 
 
  Storybored is a place where people can collaborate to create \\ 
 
