--- a/README.org
+++ b/README.org
@@ -3,9 +3,8 @@ Bloginator Project, Zamansky 2015
 
 * What is Storybored?
 
- Write your stories /on/ our board \\
-
- /when/ you're bored. 
+ Write your stories /on/ our board
+ /when/ you're bored.
 
  Storybored is a place where people can collaborate to create \\ 
 
