--- a/README.org
+++ b/README.org
@@ -36,8 +36,8 @@ Bloginator Project, Zamansky 2015
 - +Make sign up+
 - +Allow to make new posts+
 - +Allow to add to existing posts+
-- Allow to delete old posts
-- Allow to delete old lines
+- +Allow to delete old posts+
+- +Allow to delete old lines+
 - Create a profile that shows only your posts (optional)
 - Create other people's profiles (optional)
 - Create a search bar (optional)
