--- a/README.org
+++ b/README.org
@@ -3,63 +3,19 @@ Bloginator Project, Zamansky 2015
 
 * What is StoryBored?
 
- Write your stories /on/ our board
+ Write your stories /on/ our board /when/ you're bored.
 
- /when/ you're bored.
-
- Storybored is a place where people can collaborate to create  
-
- stories. People may post starts to stories and other users 
-
- are able to add lines to these stories. 
+ Storybored is a place where people can collaborate to create stories. 
+ 
+ People may post starts to stories and other users are able to add lines to these stories. 
 
 
-* Team Members
+* (Refactoring) Team Members
 
-| Group Members  | Role                     | 
-|----------------|--------------------------|  
-| Angela Chan    | Leader                   |
-| Leon Cheng     | Backend Developer        |
-| Amanda Chiu    | User Experience Designer |
-| Eric Stringham | Middleware Developer     |
+| Group Members  |
+|----------------|  
+| Yasmeen Roumie | 
+| Daisy Barbanel | 
+| Loren Maggiore | 
+| Nicholas Yang  | 
 
-* To Do (Pages)
-- +Home Page+
-- +Login Page+
-- +Signup Page+
-- +Main Page+
-- +Story Page+
-- +New Post Page+
-
-* To Do (Functions)
-- +Make log in+
-- +Make sign up+
-- +Allow to make new posts+
-- +Allow to add to existing posts+
-- +Allow to delete old posts+
-- +Allow to delete old lines+
-- Create a profile that shows only your posts (optional)
-- Create other people's profiles (optional)
-- Create a search bar (optional)
-- Make it so only people with permission can edit posts (optional)
-
-* Timeline
-
-| Date                       | Work                                             |
-|----------------------------+--------------------------------------------------|
-| October 9, Friday, 2015    | Initial Commit                                   |
-| October 11, Sunday, 2015   | Home Page Design                                 |
-|                            | Added buttons and basic forms                    |
-| October 12, Monday, 2015   | Added basic user authentication, login, userpage |
-|                            | Created base.html for formatting html pages      |
-| October 13, Tuesday, 2015  | Added icons and small design improvements        |
-| October 15, Thursday, 2015 | Created page for new posts                       |
-|                            | Created a story page                             |
-|                            | Created a sign up page                           |
-| October 16, Friday, 2015   | Created a form for new post page                 |
-| October 17, Saturday, 2015 | Designed userpage and animated effects           |
-|                            | General animation detailing & editing            |
-|                            | Started working with databases                   |
-|                            | Allowed users to make new accounts               |
-|                            | Allowed users to log in with said accounts       |
-| October 18, Sunday, 2015   |                                                  |
